# dend-p2p

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  RELEASE_CN.md  config.toml  guide.md  server-guide.md
.github/workflows/: release.yml
src/: cache.rs  client.rs  client_webui.rs  config.rs  main.rs  protocol.rs  server.rs
src/client/: mod.rs  static_assets.rs
src/client/static/: index.html
src/client/static/css/: style.css
src/client/static/js/: app.js
src/server/: mod.rs
