[package]
name = "dend-p2p"
version = "0.1.0"
edition = "2021"
authors = ["HUA Haohui"]

[dependencies]
tokio = { version = "1.32", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
clap = { version = "4.4", features = ["derive"] }
bytes = "1.5"
bincode = "1.3"
futures = "0.3"
socket2 = "0.5"
tun = { version = "0.6", features = ["async"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
serde_json = "1.0.149"
