[package]
name = "dend-p2p"
version = "0.3.2"
edition = "2021"
authors = ["HUA Haohui"]

[dependencies]
tokio = { version = "1.32", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
clap = { version = "4.4", features = ["derive"] }
bytes = "1.5"
bincode = "1.3"
futures = "0.3"
socket2 = "0.5"
tun = { version = "0.6", features = ["async"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
serde_json = "1.0"
open = "5"
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
tower = "0.5"
parking_lot = "0.12"
lazy_static = "1.4"
rust-embed = "8.0"
mime_guess = "2.0"
rand = "0.8"
once_cell = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
